# nanomites

./: .gitignore  Makefile  README.md  config.mk  crackme.c  create_linker_script.awk  debug.c  debug.h  main.c  nanocalls.py  start.s  table.c
engine/: engine.c  linker.ld
libc/: Makefile  __strerror.h  fgets.c  fputs.c  fwrite.c  lib.h  memcpy.s  memmove.s  memset.s  printf.c  putchar.c  strchr.c  strcmp.c  strerror.c  strlen.c
utils/aes/: aes.c
utils/crackme-poc/: Makefile  crackme.c  decrypt_engine.c  lib.h  start.s
utils/crackme-poc/patcher/: funcs_table.c  funcs_table.h  patcher.c
utils/gen-add-round-key/: .stylish-haskell.yaml  LICENSE  gen-add-round-key.cabal
utils/gen-add-round-key/app/: Main.hs  OptionsParser.hs
utils/gen-add-round-key/src/: Common.hs  Expr.hs  Generator.hs  Interpreter.hs  Printer.hs
utils/gen_add_round_key/: code_gen.py  expr.py  expr_gen.py  fixed.py  gen_add_round_key.py  round_key.py  tests.py
utils/gen_table/: gen_table.py
utils/num_setter/: Makefile  addr_table.c  addr_table.h  elf_parser.c  elf_parser.h  file_map.c  file_map.h  htable.c  htable.h  main.c  nanocalls_table.c  nanocalls_table.h  offset_parser.c  offset_parser.h  offset_table.c  offset_table.h  vector.c  vector.h
utils/patcher/: Makefile  aes.c  aes.h  funcs_table.c  funcs_table.h  patcher.c
