cabal-version: 2.2
name:          gen-add-round-key
version:       0.1.0.0
synopsis:      Whitebox round key generator for amd64
description:   Whitebox round key generator for amd64
homepage:      https://github.com/cyberfined/nanomites
bug-reports:   https://github.com/cyberfined/nanomites/issues
author:        cyberfined
maintainer:    cyberfined@protonmail.com
copyright:     Copyright (c) cyberfined
license:       WTFPL
license-file:  LICENSE
category:      Cryptography
build-type:    Simple
extra-source-files:
    LICENSE
    README.md

source-repository head
  type:     git
  location: https://github.com/cyberfined/nanomites

library
  exposed-modules:
      Expr
    , Generator
    , Interpreter
    , Printer
  other-modules:
      Common
  hs-source-dirs:
      src
  ghc-options: -Wall -O2
  build-depends:
      array >= 0.5 && < 1
    , base >= 4.7 && < 5
    , bytestring >= 0.11 && < 1
    , containers >= 0.6 && < 1
    , hashable >= 1.4 && < 2
    , random >= 1.2 && < 2
    , text >= 2 && < 3
    , transformers >= 0.6 && < 1
    , unordered-containers >= 0.2 && < 1
  default-extensions:
      DerivingStrategies
    , FlexibleContexts
    , GeneralizedNewtypeDeriving
    , LambdaCase
    , OverloadedStrings
    , RecordWildCards
  default-language: Haskell2010

executable gen-add-round-key
  main-is: Main.hs
  other-modules:
      OptionsParser
  hs-source-dirs:
      app
  ghc-options: -Wall -O2
  build-depends:
      base >= 4.7 && < 5
    , bytestring >= 0.11 && < 1
    , gen-add-round-key
    , optparse-applicative >= 0.18 && < 1
    , random >= 1.2 && < 2
    , text >= 2 && < 3
  default-extensions:
      LambdaCase
    , OverloadedStrings
    , RecordWildCards
  default-language: Haskell2010
